[package]
name = "taurpc"
authors = ["MatsDK"]
version = "0.8.0"
edition = "2021"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []
rust-version = "1.77.2"

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
  "taurpc-macros",
]

[dependencies]
anyhow = "1"
heck = "0"
itertools = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.23", features = ["collect", "function"] }
specta-macros = { version = "2.0.0-rc.23" }
specta-serde = { version = "0.0.10", features = [] }
specta-typescript = { version = "0.0.10", features = [] }
tauri = { version = "2.10", features = ["specta"] }
taurpc-macros = { path = "./taurpc-macros", version = "=0.8.0" }
tokio = { version = "1", features = ["full"] }
