[package]
name = "taurpc"
authors = ["MatsDK", "johncarmack1984"]
version = "0.7.1"
edition = "2024"
description = "A type-safe IPC layer for tauri commands"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/fltsci/TauRPC"
repository = "https://github.com/fltsci/TauRPC"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = []
rust-version = "1.85"

[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["taurpc-macros"]

[dependencies]
heck = "0.5"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.24", features = ["std", "derive", "function"] }
specta-serde = "0.0.11"
specta-typescript = "0.0.11"
tauri = { version = "2", features = ["specta"] }
taurpc-macros = { path = "./taurpc-macros", version = "=0.7.1" }
tokio = { version = "1", features = ["full"] }
