[package]
name = "example-v2-beta"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

taurpc = { path = "../../taurpc" }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"

# TODO: Drop this once changes land on `main`
[patch.crates-io]
specta = { git = "https://github.com/oscartbeaumont/specta", rev = "f3988f6a513cfbf72480bffbdcf4259775416974" }
specta-typescript = { git = "https://github.com/oscartbeaumont/specta", rev = "f3988f6a513cfbf72480bffbdcf4259775416974" }
