[package]
name = "taurpc-macros"
version = "0.5.2"
edition = "2021"
description = "Macros for the taurpc crate"
documentation = "https://docs.rs/taurpc"
readme = "README.md"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
# convert_case = "0.6"
