[package]
name = "taurpc-macros"
version = "0.5.2"
edition = "2021"
description = "Macros for the taurpc crate"
documentation = "https://docs.rs/taurpc"
homepage = "https://github.com/MatsDK/TauRPC"
repository = "https://github.com/MatsDK/TauRPC"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.116", features = ["full"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
serde = { version = "1", features = ["derive"] }

serde_json = "1.0.149"
# convert_case = "0.6"
